FlightPath 6.x Changelog
========================

2021-06-22
  Fixed bug in user module where adding a new faculty user caused mysql error.
  
  Added a backtrace (like we do for MySQL errors) to the PHP error handler in misc.inc.  Also adding to watchdog
  when we get a warning or error from the handler.
  
  Changed the way cookies are unset on logout, to fix an issue where they were not being unset correctly, but also
  to handle possible array notation in the cookie names.  See system.module
  
  Made changes to watchdog severity level for certain types of data, in anticipation of a module which would delete, for example,
  "WATCHDOG_DEBUG" entries after X amount of time, since they are the least important.  Also made changes to the PHP error handler
  so it correctly identifies in the watchdog whether it was a PHP error or warning, and adjusts the severity constant accordingly.
  
  Fixed typo in user settings pulldown menu.
  
  Made it so if you are not logged in, the left sidebar menu shows a link to the login page.
  

2021-06-17
  Fixed small typo in form_error() message when rejecting a saved degree.
  
  In student_search module, got rid of the "majors"-related permissions.  Also cleaned up code which had been commented out.
  

2021-06-16
  Adding in new setting to disable all student logins (unless whitelisted).  It's in the System Settings form.

  Added is_disabled and last_login to fields in the user object.

  Added new hook to allow easy manipulation of student profile items in the "currently advising" box at top of screen.

  Changing user_settings to be a key/value pair type table, making it easy to add new settings in the future.

  Created new table called "user_attributes", and it's used the same as user_settings.  This lets us store details about
  a student, for example, if they are an athlete or student worker, etc, w/o having to hard-code any values.  We are removing the